--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI=mongodb+srv://ayanat:Kairat1234@node.u2xvq.mongodb.net/myapp
+MONGO_URI=mongodb+srv://Daniyal:admin1234@cluster0.acidn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
