--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "express-session": "^1.18.1",
     "mongoose": "^8.10.0",
     "nodemon": "^3.1.9",
     "validator": "^13.12.0"
